--- a/Hw0/Index.html
+++ b/Hw0/Index.html
@@ -17,7 +17,7 @@
     <div class="bigger">
     <ul>
         <li>Trophy Cabinet (unfortunately unavailble due to lack of trophies) </li>
-        <li>Near Success Stories</li>
+        <li> <a href="/Near%20Sucess%20Stories.html"> Near Success Stories </a> </li>
         <li>"Great" Players</li>
     </ul>
     </div>
