--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -3,14 +3,38 @@
     <meta name="description" 
     content="Exploring Tottenham Hotspurs' failure to succeed at 
     multiple hurdles over the last 10 years">
-   
+    <style> 
+    .center
+        {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 60%;
+        }
+    
+    .font
+        {
+            font-style: oblique;
+        }
+     .bigger
+        {
+        font-size: large;    
+        }   
+    .middle 
+        {
+        text-align: center;
+        }
+
+    </style>
+
 </head>
 
 <body>
-    
+    <div class="middle">
     <title> Tottenham's Near Success Stories </title>
-   
-    <div class="middle"> 
+    </div>
+
+    <div class="center"> 
     <h1>Tottenham's Near Success Stories</h1>
    
     <div class="bigger">
