--- a/Hw0/Players.html
+++ b/Hw0/Players.html
@@ -2,7 +2,10 @@
 <head> 
     <meta name="description" 
     content="Some of the legendary players to grace the pitch for Tottenham">
+    <style> 
+   
 
+    </style>
 
 </head>
 
