--- a/Hw0/Index.html
+++ b/Hw0/Index.html
@@ -18,7 +18,7 @@
     <ul>
         <li>Trophy Cabinet (unfortunately unavailble due to lack of trophies) </li>
         <li> <a href="/Hw0/Stories.html"> Near Success Stories </a> </li>
-        <li>"Great" Players</li>
+        <li> <a href="/Hw0/Players"> Great Players </a> </li>
     </ul>
     </div>
 
