--- a/Hw0/Players.html
+++ b/Hw0/Players.html
@@ -1,5 +1,6 @@
 <html>
 <head> 
+    <link rel="stylesheet" href="style.css">
     <meta name="description" 
     content="Some of the legendary players to grace the pitch for Tottenham">
     <style> 
