--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -1,8 +1,10 @@
 <html>
 <head> 
+    <link rel="stylesheet" href="style.css">
     <meta name="description" 
     content="Exploring Tottenham Hotspurs' failure to succeed at 
     multiple hurdles over the last 10 years">
+    
     <style> 
     .center
         {
