--- a/Hw0/Players.html
+++ b/Hw0/Players.html
@@ -11,7 +11,7 @@
    
     <h1>Tottenham's "Great" Players</h1>
 
-    <div class="center"> 
+    <div class="dotted"> 
    
     <img src="https://media.bleacherreport.com/w_800,h_533,c_fill/br-img-images/002/824/906/hi-res-f1e57d8bcba991914b32c0d86b91b6ae_crop_north.jpg"
         width=400px
@@ -27,7 +27,7 @@
     title= "Victor Janssen" >
     </div>
    
-    <div class="font"> 
+    <div class="diffont"> 
     <ul>
     <p>Tottenham Hotspur is well known for cultivating crops of mediocre players. Ultimately, their careers stagnate and they retire with no meaningful sucess.
          Nonetheless, we must respect their ability to play with the knowledge that they will achieve no impressive accolades. 
@@ -45,7 +45,7 @@
     </ul>
     </div>
 
-    <div class="bigger">
+    <div class="larger">
         Giorgio Chiellini:
         <p> 
             <span style="color: steelblue;"> "It’s the history of Tottenham. They always create many chances and score so much but, in the end, they miss always something to arrive at the end. We believe in history" </span>
