--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -16,7 +16,7 @@
     <div class="center"> 
     <h1>Tottenham's Near Success Stories</h1>
    
-    <div class="bigger">
+    <div class="large">
         <p> 
         "When we won the league at Tottenham, they came back 2-2 in the last-minute of the game, and they're celebrating - because they're happy to draw against us, obviously. 
         And I remember saying to Mauricio Tarricco, do you realise we only need a point to be Champions? And they all [were really shocked]. So I said 'Yes. Now we're going to celebrate on your pitch. Bye bye!'" 
