--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -32,7 +32,7 @@
     </div>
     </p>
    
-    <div class="font"> 
+    <div class="oblique"> 
      <p>Tottenham is currently going through a golden age of their history. 
         This golden age has come with no tangible success as they have consistently failed to capitalize on opportunities to win trophies.
         The peak of this "golden generation" will be losing a series of finals, most notably the Champions League Final in 2019 (pictured above). 
