--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -15,7 +15,8 @@
 
     <div class="center"> 
     <h1>Tottenham's Near Success Stories</h1>
-   
+   </div>
+
     <div class="large">
         <p> 
         "When we won the league at Tottenham, they came back 2-2 in the last-minute of the game, and they're celebrating - because they're happy to draw against us, obviously. 
@@ -33,22 +34,21 @@
     </p>
    
     <div class="oblique"> 
-     <p>Tottenham is currently going through a golden age of their history. 
+    <p>Tottenham is currently going through a golden age of their history. 
         This golden age has come with no tangible success as they have consistently failed to capitalize on opportunities to win trophies.
         The peak of this "golden generation" will be losing a series of finals, most notably the Champions League Final in 2019 (pictured above). 
-     </p>
+    </p>
 
     <p>Tottenham fans also find proof of success in their ability to put pressure on other teams that ultimately win the English Premier League.
         The best example is the 2015/2016 season, where although they seemed to be in a two horse race for the league title against Leicester City,
         they were able to finish third. 
     </p>
 
-     <p>Most recently Tottenham had a huge chance to end their 13 year trophy drought. In April 2020, they played Manchester City in the Final
+    <p>Most recently Tottenham had a huge chance to end their 13 year trophy drought. In April 2020, they played Manchester City in the Final
          of the EFL Cup. Unsuprisingly, they had an underwhelming performance and lost the game 1-0. A week earlier the club had made the decision
         to sack their coach, which was seen as a questionable and strange decision coming into a hugely important game. 
      </p>
     </div>
-
 
     <div id="fb-root"> </div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="IQq1acMR"></script>
