--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -50,6 +50,9 @@
      </p>
     </div>
 
+    <li> <a href="/Hw0/Index.html"> Main Page </a> </li>
+    <li> <a href="/Hw0/Players.html"> Great Players </a> </li>
+
     <div id="fb-root"> </div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="IQq1acMR"></script>
     <div class="fb-like" data-href="https://nrj-demello.github.io/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
