--- a/Hw0/Players.html
+++ b/Hw0/Players.html
@@ -52,9 +52,16 @@
         </p>
     </div>
 
+    <ul> 
+        <li> <a href="/Hw0/Index.html"> Main Page </a> </li>
+        <li> <a href="/Hw0/Stories.html"> Great Players </a> </li>
+    </ul>  
+
+    <p>
     <div id="fb-root"> </div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="IQq1acMR"></script>
     <div class="fb-like" data-href="https://nrj-demello.github.io/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+    </p>
 
 </body>
 
