--- a/Hw0/Players.html
+++ b/Hw0/Players.html
@@ -54,7 +54,7 @@
 
     <ul> 
         <li> <a href="/Hw0/Index.html"> Main Page </a> </li>
-        <li> <a href="/Hw0/Stories.html"> Great Players </a> </li>
+        <li> <a href="/Hw0/Stories.html"> Tottenham's Near Success Stories </a> </li>
     </ul>  
 
     <p>
