--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -23,13 +23,16 @@
         And I remember saying to Mauricio Tarricco, do you realise we only need a point to be Champions? And they all [were really shocked]. So I said 'Yes. Now we're going to celebrate on your pitch. Bye bye!'" 
         </p>
         <span style="color: slategray;"> - Thierry Henry </span>
+    </div>
+
 
     <p> 
+    <div class="center"> 
     <img src="https://images.daznservices.com/di/library/GOAL/df/af/harry-kane-champions-league-2018-19_1sjzcfakpt6vq1a3y4qwtmgca4.png?quality=60&w=1200"
         width=800px
     alt="Tottenham succeed in losing the 2018/19 Champions League Final" 
     title= "Sucess" >
-    </div>
+   </div>
     </p>
    
     <div class="oblique"> 
