--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -52,7 +52,7 @@
      </p>
     </div>
 
-    <ul> 
+    <ul id="first">
     <li> <a href="/Hw0/Index.html"> Main Page </a> </li>
     <li> <a href="/Hw0/Players.html"> Great Players </a> </li>
     </ul>  
