--- a/Hw0/Index.html
+++ b/Hw0/Index.html
@@ -16,7 +16,7 @@
 
     <div class="bigger">
     <ul>
-        <li>Trophy Cabinet (unfortunately unavailble due to lack of trophies) </li>
+        <li>Trophy Cabinet (unfortunately unavailable due to lack of trophies) </li>
         <li> <a href="/Hw0/Stories.html"> Near Success Stories </a> </li>
         <li> <a href="/Hw0/Players.html"> Great Players </a> </li>
     </ul>
@@ -109,4 +109,15 @@
     <div class="fb-like" data-href="https://nrj-demello.github.io/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
     
 </body>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WQTLD4BH5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2WQTLD4BH5');
+</script>
+
 </html>
