--- a/Hw0/Stories.html
+++ b/Hw0/Stories.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <div class="middle">
     <title> Tottenham's Near Success Stories </title>
-    </div>
 
     <div class="center"> 
     <h1>Tottenham's Near Success Stories</h1>
@@ -63,5 +61,14 @@
     <div class="fb-like" data-href="https://nrj-demello.github.io/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
     </p>
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-911E0LK62T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-911E0LK62T');
+</script>
 
 </html>
