--- a/Hw0/Players.html
+++ b/Hw0/Players.html
@@ -65,4 +65,14 @@
 
 </body>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2XFJ07BJPN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2XFJ07BJPN');
+</script>
+
 </html>
