--- a/Hw0/Index.html
+++ b/Hw0/Index.html
@@ -102,7 +102,10 @@
 
         <p>I'm hosted with GitHub Pages.</p>
     
-       
+        <p>Check out these pages! </p>
+        <p> <a href="https://nikhilagarwal1111.github.io/?fbclid=IwAR0wUXgI2T_zNJP49Mo5pGOwtM-Rdb11uymrGMx67XKU_5mVyiS1WnJpNcM"> Novak Djokovic</a> </p>
+        <p> <a href="https://wgalbreath.github.io/index.html"> Bees!</a> </p>
+
 
     <div id="fb-root"> </div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="IQq1acMR"></script>
