--- a/Hw0/Index.html
+++ b/Hw0/Index.html
@@ -105,8 +105,10 @@
         <p>Check out these pages! </p>
         <p> <a href="https://nikhilagarwal1111.github.io/?fbclid=IwAR0wUXgI2T_zNJP49Mo5pGOwtM-Rdb11uymrGMx67XKU_5mVyiS1WnJpNcM"> Novak Djokovic</a> </p>
         <p> <a href="https://wgalbreath.github.io/index.html"> Bees!</a> </p>
+        <p> <a href="Https://arijmoore.github.io/index.html"> Alphabet!</a> </p>
+        <p> <a href="https://shreyachatterjee22.github.io/week01/index.html"> Favorites!</a> </p>
 
-
+   
     <div id="fb-root"> </div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="IQq1acMR"></script>
     <div class="fb-like" data-href="https://nrj-demello.github.io/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
